--- a/ArduinoIDEWrapper/ArduinoIDEWrapper.csproj
+++ b/ArduinoIDEWrapper/ArduinoIDEWrapper.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{AC5A5F58-5003-45B7-9CE9-46DCDDF51E5A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ArduinoIDEWrapper</RootNamespace>
+    <RootNamespace>Arduino.IDE</RootNamespace>
     <AssemblyName>ArduinoIDEWrapper</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -40,8 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArduinoExample.cs" />
-    <Compile Include="ArduinoIDE.cs" />
+    <Compile Include="Example.Service\ArduinoExampleSketch.cs" />
+    <Compile Include="Example.Service\ArduinoSketch.cs" />
+    <Compile Include="Example.Service\ArduinoLibraryExampleSketch.cs" />
+    <Compile Include="Example.Service\ExamplesService.cs" />
+    <Compile Include="Example.Service\SketchCategory.cs" />
+    <Compile Include="IDE.Service\ArduinoIDE.cs" />
+    <Compile Include="IDE.Service\ArduinoEnvironment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
