Add more tests. \n Add the Coverage report generator tool with the solution and configure it in the build process. So if the project is built with OpenCover configuration then the tests would be ran with open cover and coverage report would be generated then and there. It will be available in the <TestProject>/testReport/index.htm

--- a/ArduinoIDEWrapper/ArduinoIDEWrapper.csproj
+++ b/ArduinoIDEWrapper/ArduinoIDEWrapper.csproj
@@ -39,6 +39,8 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisIgnoreBuiltInRuleSets>true</CodeAnalysisIgnoreBuiltInRuleSets>
     <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
