--- a/ArduinoWrapper.Tests/ArduinoIDEWrapper.Tests.csproj
+++ b/ArduinoWrapper.Tests/ArduinoIDEWrapper.Tests.csproj
@@ -44,9 +44,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
-    <Reference Include="OpenCover.MSBuild">
-      <HintPath>..\Utils\opencover\MSBuild\OpenCover.MSBuild.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -59,9 +56,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Example.Service.Tests\ArduinoExamplesService.Tests.cs" />
+    <Compile Include="IDE.Service\ArduinoIDETests.cs" />
     <Compile Include="Library.Service\Library.Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="IDEWrapper.tests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ArduinoIDEWrapper\ArduinoIDEWrapper.csproj">
