Add propertis file parser to the library. The parser is based on the rules specified by the http://docs.oracle.com/javase/6/docs/api/java/util/Properties.html#load%28java.io.Reader%29

--- a/ArduinoIDEWrapper/ArduinoIDEWrapper.csproj
+++ b/ArduinoIDEWrapper/ArduinoIDEWrapper.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="Board.Service\ArduinoBoard.cs" />
     <Compile Include="Board.Service\BoardService.cs" />
+    <Compile Include="Board.Service\Properties.cs" />
     <Compile Include="Example.Service\ArduinoExampleSketch.cs" />
     <Compile Include="Example.Service\ArduinoSketch.cs" />
     <Compile Include="Example.Service\ArduinoLibraryExampleSketch.cs" />
